[gd_scene load_steps=4 format=3 uid="uid://b6b3rska3xjo1"]

[ext_resource type="Script" uid="uid://d2qvlpg5wg3lw" path="res://scenes/ui/icon_button.gd" id="1_35eef"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o0jvh"]
bg_color = Color(0.9955804, 0.99558026, 0.99558026, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0018410675, 0.0018410688, 0.0018410651, 1)
corner_radius_top_left = 62
corner_radius_top_right = 62
corner_radius_bottom_right = 62
corner_radius_bottom_left = 62
shadow_size = 2
shadow_offset = Vector2(2, 1)

[sub_resource type="LabelSettings" id="LabelSettings_jkamp"]
font_size = 24
outline_size = 4
outline_color = Color(0.0056611504, 0.0056611514, 0.00566115, 1)
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.48235294)
shadow_offset = Vector2(4, 2)

[node name="IconButton" type="PanelContainer"]
custom_minimum_size = Vector2(88, 88)
offset_right = 64.0
offset_bottom = 64.0
theme_override_styles/panel = SubResource("StyleBoxFlat_o0jvh")
script = ExtResource("1_35eef")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
expand_mode = 1

[node name="Label" type="Label" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 2
label_settings = SubResource("LabelSettings_jkamp")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
